force-app/main/default/objects/ContractSchema__c/ContractSchema__c.object-meta.xml
<CustomObject>
    <label>ContractSchema</label>
    <nameField>
        <label>ContractSchema Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractSchemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>