force-app/main/default/objects/ContractSchema__c/fields/OutputFormat__c.field-meta.xml
<CustomField>
    <fullName>OutputFormat__c</fullName>
    <label>OutputFormat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted> 
        <valueSetDefinition>
            <value>   
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>