force-app/main/default/objects/ContractSchema__c/fields/TemplateContent__c.field-meta.xml
<CustomField>
    <fullName>TemplateContent__c</fullName>
    <label>TemplateContent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>